# plasma-applet-eventcalendar

./: .gitignore  Changelog.md  ReadMe.md  build  install  run  uninstall  update
batterytime/: Changelog.md  ReadMe.md  reinstall  run
com.github.zren.example/: ReadMe.md  build  run
commandoutput/: ReadMe.md
example/: ReadMe.md  build  project.sublime-project  run
google-oauth-helper/: local-http.go
org.kde.plasma.eventcalendar/: Changelog.md  ReadMe.md  build  run  update
org.kde.plasma.showdesktop/: ReadMe.md
org.kde.plasma.volumewin7mixer/: Changelog.md  ReadMe.md  build  run
org.kde.plasma.volumewin7mixer/plugin/: .gitignore  CMakeLists.txt  ReadMe.md  build  install  plugin.cpp  plugin.h  qmldir  volumepeaks.cpp  volumepeaks.h
org.kde.plasma.win7showdesktop/: ChangeLog.md  ReadMe.md  build
org.kde.plasma.win7taskmanager/: ReadMe.md  install  reinstall  run
package/: metadata.desktop
presentwindows/: Changelog.md  ReadMe.md  install  reinstall  run
terminalupdate/: ReadMe.md
tiledmenu/: AppletMain.qml  AppsModel.qml  AppsView.qml  Changelog.md  FavouritesView.qml  FlatButton.qml  GridSection.qml  KickerListModel.qml  KickerListView.qml  LauncherIcon.qml  Main.qml  Menu1.qml  MenuList.qml  MenuListItem.qml  Popup.qml  ReadMe.md  SearchField.qml  SearchModel.qml  SearchResultsList.qml  SearchResultsModel.qml  SearchResultsView.qml  SearchView.qml  SidebarContextMenu.qml  SidebarItem.qml  SidebarMenu.qml  Theming.md  build  metadata.desktop  run
todolist/: ChangeLog.md  ReadMe.md  run
updatecommand/: ReadMe.md  build  install  reinstall
(+447 files in other folders)
